# AlgoGeoUHA

./: CMakeLists.txt  affichage.cpp  affichage.h  demo
Carte/: carte.cpp  carte.h  triangulation.cpp  triangulation.h
Classes/: enveloppe.cpp  enveloppe.h  point.cpp  point.h  polygone.cpp  polygone.h
